name:                external-stg
version:             0.1.0.1
synopsis:            A library to dump GHC's STG representation.

license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2018 Csaba Hruska
category:            Development
build-type:          Simple
tested-with:         GHC==8.8.3
cabal-version:       >=1.10

library
  exposed-modules:
    Stg.Pretty
    Stg.IRLocation
    Stg.Tickish
    Stg.Reconstruct
    Stg.Deconstruct
    Stg.Fullpak
    Stg.Program
    Stg.IO
    Stg.GHC.Symbols
    Stg.JSON
    Stg.Analysis.Closure
    Stg.Analysis.ForeignInfo
    Stg.Analysis.LiveVariable
    Stg.Foreign.Linker
    Stg.Foreign.Stubs
  hs-source-dirs:      lib
  ghc-options:         -Wall
  cpp-options:         -DEXTERNAL_STG_PACKAGE
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base,
                       bytestring,
                       filemanip,
                       filepath,
                       directory,
                       process,
                       binary,
                       containers,
                       transformers,
                       mtl,
                       unordered-containers,
                       hashable,
                       ansi-wl-pprint,
                       final-pretty-printer,
                       zip,
                       text,
                       aeson,
                       yaml,
                       external-stg-syntax
  default-language:    Haskell2010

executable ext-stg
  hs-source-dirs:      app
  main-is:             ext-stg.hs
  build-depends:       base < 5.0,
                       external-stg,
                       external-stg-syntax,
                       ansi-wl-pprint,
                       bytestring,
                       text,
                       optparse-applicative
  default-language:    Haskell2010

executable stgapp
  hs-source-dirs:      app
  main-is:             stgapp.hs
  build-depends:       base < 5.0,
                       containers,
                       filepath,
                       directory,
                       yaml,
                       unix,
                       process,
                       bytestring,
                       external-stg,
                       external-stg-syntax,
                       optparse-applicative
  default-language:    Haskell2010

executable mkfullpak
  hs-source-dirs:      app
  main-is:             mkfullpak.hs
  build-depends:       base
                     , filepath
                     , optparse-applicative
                     , external-stg
  default-language:    Haskell2010
