cabal-version:       3.0
name:                external-stg
version:             0.1.0.1
synopsis:            A library to dump GHC's STG representation.

license:             BSD-3-Clause
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2018 Csaba Hruska
category:            Development
build-type:          Simple

common lang
  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -Wunused-packages
    -Wmissing-deriving-strategies


library
  import:              lang
  hs-source-dirs:      lib
  cpp-options:         -DEXTERNAL_STG_PACKAGE
  build-depends:       base,
                       bytestring,
                       filemanip,
                       filepath,
                       directory,
                       process,
                       binary,
                       containers,
                       mtl,
                       unordered-containers,
                       hashable,
                       final-pretty-printer,
                       zip,
                       text,
                       aeson,
                       yaml,
                       external-stg-syntax
  exposed-modules:
    Stg.Pretty
    Stg.IRLocation
    Stg.Tickish
    Stg.Reconstruct
    Stg.Deconstruct
    Stg.Fullpak
    Stg.Program
    Stg.IO
    Stg.GHC.Symbols
    Stg.JSON
    Stg.Analysis.Closure
    Stg.Analysis.ForeignInfo
    Stg.Analysis.LiveVariable
    Stg.Foreign.Linker
    Stg.Foreign.Stubs

executable ext-stg
  import:              lang
  hs-source-dirs:      app
  main-is:             ext-stg.hs
  build-depends:       base < 5.0,
                       external-stg,
                       bytestring,
                       text,
                       optparse-applicative

executable stgapp
  import:              lang
  hs-source-dirs:      app
  main-is:             stgapp.hs
  build-depends:       base < 5.0,
                       containers,
                       filepath,
                       directory,
                       unix,
                       bytestring,
                       external-stg,
                       external-stg-syntax,
                       optparse-applicative

executable mkfullpak
  import:              lang
  hs-source-dirs:      app
  main-is:             mkfullpak.hs
  build-depends:       base
                     , filepath
                     , optparse-applicative
                     , external-stg
