name:                mod-pak
version:             0.1.0.1
synopsis:            A library organize compiled haskell module metadata.

license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2020 Csaba Hruska
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable mkmodpak
  hs-source-dirs:      app
  main-is:             mkmodpak.hs
  build-depends:       base < 5.0,
                       optparse-applicative,
                       filepath,
                       bytestring,
                       zip
  default-language:    Haskell2010
