cabal-version:      2.4
name:               wpc-plugin
version:            1.0.1

-- A short (one-line) description of the package.
synopsis: WPC plugin for GHC 9.6

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Csaba Hruska
maintainer:         csaba.hruska@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  WPC.Plugin
                      WPC.Modpak
                      WPC.StgToExtStg
                      WPC.GhcStgApp
                      WPC.Stubs
                      WPC.Foreign
                      WPC.ForeignStubDecls
                      WPC.Yaml
                      WPC.GlobalEnv

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      binary,
                      bytestring,
                      containers,
                      deepseq,
                      directory,
                      external-stg-syntax,
                      filepath,
                      ghc,
                      ghc-boot,
                      mtl
    hs-source-dirs:   src
    default-language: Haskell2010

foreign-library wpc-plugin
  type:                native-shared
  default-language:    Haskell2010
  hs-source-dirs:     src

  ghc-options:         -this-unit-id wpc-plugin-unit
                       -fno-link-rts

  build-depends:      base,
                      binary,
                      bytestring,
                      containers,
                      deepseq,
                      directory,
                      external-stg-syntax,
                      filepath,
                      ghc,
                      ghc-boot,
                      mtl

  other-modules:      WPC.Plugin
                      WPC.Modpak
                      WPC.StgToExtStg
                      WPC.GhcStgApp
                      WPC.Stubs
                      WPC.Foreign
                      WPC.ForeignStubDecls
                      WPC.Yaml
                      WPC.GlobalEnv
