cabal-version:      3.0
name:               wpc-plugin
version:            1.1.0

-- A short (one-line) description of the package.
synopsis: WPC plugin for GHC 9.10.1

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Csaba Hruska
maintainer:         csaba.hruska@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
  default-language: GHC2021
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
    MultiWayIf
    TupleSections
    ImplicitParams
    NamedFieldPuns
    PatternGuards
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    MultiWayIf
    ImplicitParams
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -Wunused-packages
    -Wmissing-deriving-strategies

library
    import:           lang
    exposed-modules:  WPC.Plugin
                      WPC.Modpak
                      WPC.StgToExtStg
                      WPC.GhcStgApp
                      WPC.Stubs
                      WPC.Foreign
                      WPC.ForeignStubDecls
                      WPC.Yaml
                      WPC.GlobalEnv

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      binary,
                      bytestring,
                      containers,
                      deepseq,
                      directory,
                      external-stg-syntax,
                      filepath,
                      ghc,
                      ghc-boot,
                      mtl
    hs-source-dirs:   src

foreign-library wpc-plugin
  import:             lang
  type:               native-shared
  hs-source-dirs:     src

  ghc-options:         -this-unit-id wpc-plugin-unit
                       -fno-link-rts

  build-depends:      base,
                      binary,
                      bytestring,
                      containers,
                      deepseq,
                      directory,
                      external-stg-syntax,
                      filepath,
                      ghc,
                      ghc-boot,
                      mtl

  other-modules:      WPC.Plugin
                      WPC.Modpak
                      WPC.StgToExtStg
                      WPC.GhcStgApp
                      WPC.Stubs
                      WPC.Foreign
                      WPC.ForeignStubDecls
                      WPC.Yaml
                      WPC.GlobalEnv
