cabal-version:       3.0
Name: ghc-primop-gen
Version: 0.1
Copyright: XXX
License: BSD-3-Clause
-- XXX License-File: LICENSE
Author: XXX
Maintainer: XXX
Synopsis: Generates various files implementing GHC's primitive operations.
Description:
    This utility reads a textual description of GHC's primitive operations
    (@primops.txt.pp@) and produces a number of outputs. These include,
    .
    * the @GHC.Prim@ module included in the @ghc-prim@ package.
    * the @GHC.PrimopWrappers@ module included in the @ghc-prim@ package.
    * an LaTeX document describing the primitive operations.
Category: Development
build-type: Simple

library
  hs-source-dirs:  . genprimopcode

  exposed-modules: Lexer
                   Parser
                   ParserM
                   Syntax
                   Gen
  ghc-options:         -Wall
  build-depends:       base,
                       array,
                       containers,
                       mtl,
                       prettyprinter-compat-ansi-wl-pprint,
                       pretty-show,
                       lambda

  default-language: GHC2021
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
    MultiWayIf
    TupleSections
    ImplicitParams
    NamedFieldPuns
    PatternGuards
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
